@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add 'race_restriction' key/value field, that enables to restrict an item
+to being appliable only for certain races.
+ doc/Developers/objects
+ server/apply.c
+Nicolas Weeger, 2008-02-13
+
 Remove unused functions.
  common/porting.c
  include/libproto.h
